# NumericalMethodsLibrary

./: CMakeLists.txt  Makefile  README.md
examples/: all_methods_test.cpp  example1.cpp  example2.cpp
include/: approximation.h  differential_equations.h  integration.h  interpolation.h  linear_systems.h  nonlinear_equations.h
src/: approximation.cpp  differential_equations.cpp  integration.cpp  interpolation.cpp  linear_systems.cpp  nonlinear_equations.cpp
tests/: test_approximation.cpp  test_differential_equations.cpp  test_integration.cpp  test_interpolation.cpp  test_linear_systems.cpp  test_nonlinear_equations.cpp
